--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8080
 server.servlet.session.timeout=60m
 
 #Database config
-spring.datasource.url=jdbc:mysql://localhost:3306/rps_db?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true
-spring.datasource.username=spring
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://msa-mysql:3306/rps_db?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true
+#spring.datasource.username=spring
+#spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring Data JPA
